--- a/demo/reload-data.html
+++ b/demo/reload-data.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Organization Chart Plugin</title>
   <link rel="icon" href="img/logo.png">
-  <link rel="stylesheet" href="css/jquery.orgchart.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../src/css/jquery.orgchart.css">
+  <link rel="stylesheet" href="./css/style.css">
   <style type="text/css">
     button { padding: 0.5rem 1rem; font-size: 1rem; }
   </style>
@@ -16,8 +16,8 @@
   <button style="margin: 10px;" id="btn-chart3">chart 3</button>
   <div id="chart-container"></div>
 
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/jquery.orgchart.js"></script>
+  <script type="text/javascript" src="../src/js/jquery.min.js"></script>
+  <script type="text/javascript" src="../src/js/jquery.orgchart.js"></script>
   <script type="text/javascript">
     $(function() {
 
