--- a/demo/center-on-selected-node.html
+++ b/demo/center-on-selected-node.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Organization Chart Plugin</title>
   <link rel="icon" href="img/logo.png">
-  <link rel="stylesheet" href="css/jquery.orgchart.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../src/css/jquery.orgchart.css">
+  <link rel="stylesheet" href="./css/style.css">
   <style type="text/css">
     .orgchart { background: white; }
   </style>
@@ -15,8 +15,8 @@
 <body>
   <div id="chart-container"></div>
 
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/jquery.orgchart.js"></script>
+  <script type="text/javascript" src="../src/js/jquery.min.js"></script>
+  <script type="text/javascript" src="../src/js/jquery.orgchart.js"></script>
   <script type="text/javascript">
     $(function() {
 
