--- a/demo/filter-node.html
+++ b/demo/filter-node.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Organization Chart Plugin</title>
   <link rel="icon" href="img/logo.png">
-  <link rel="stylesheet" href="css/jquery.orgchart.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../src/css/jquery.orgchart.css">
+  <link rel="stylesheet" href="./css/style.css">
   <style type="text/css">
     .orgchart .node.matched { background-color: rgba(238, 217, 54, 0.5); }
     .orgchart .hierarchy.first-shown::before {
@@ -36,8 +36,8 @@
     <button type="button" id="btn-cancel">Cancel</button>
   </div>
 
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/jquery.orgchart.js"></script>
+  <script type="text/javascript" src="../src/js/jquery.min.js"></script>
+  <script type="text/javascript" src="../src/js/jquery.orgchart.js"></script>
   <script type="text/javascript">
     function loopChart ($hierarchy) {
       var $siblings = $hierarchy.children('.nodes').children('.hierarchy');
