--- a/demo/integrate-map.html
+++ b/demo/integrate-map.html
@@ -5,8 +5,8 @@
   <title>Organization Chart Plugin</title>
   <link rel="icon" href="img/logo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.18.2/ol.css">
-  <link rel="stylesheet" href="css/jquery.orgchart.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../src/css/jquery.orgchart.css">
+  <link rel="stylesheet" href="./css/style.css">
   <style type="text/css">
     #chart-container {
       position: absolute;
@@ -28,8 +28,8 @@
   <div id="chart-container"></div>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.18.2/ol.js"></script>
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/jquery.orgchart.js"></script>
+  <script type="text/javascript" src="../src/js/jquery.min.js"></script>
+  <script type="text/javascript" src="../src/js/jquery.orgchart.js"></script>
   <script type="text/javascript">
     $(function() {
 
