--- a/demo/right2left.html
+++ b/demo/right2left.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Organization Chart Plugin</title>
   <link rel="icon" href="img/logo.png">
-  <link rel="stylesheet" href="css/jquery.orgchart.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../src/css/jquery.orgchart.css">
+  <link rel="stylesheet" href="./css/style.css">
   <style type="text/css">
     #chart-container { text-align: right; }
   </style>
@@ -13,8 +13,8 @@
 <body>
   <div id="chart-container"></div>
 
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/jquery.orgchart.js"></script>
+  <script type="text/javascript" src="../src/js/jquery.min.js"></script>
+  <script type="text/javascript" src="../src/js/jquery.orgchart.js"></script>
   <script type="text/javascript">
     $(function() {
 
