--- a/demo/ul-datasource.html
+++ b/demo/ul-datasource.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Organization Chart Plugin</title>
   <link rel="icon" href="img/logo.png">
-  <link rel="stylesheet" href="css/jquery.orgchart.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../src/css/jquery.orgchart.css">
+  <link rel="stylesheet" href="./css/style.css">
   <style type="text/css">
     #ul-data { display: inline-block; width: 40%; vertical-align: top; }
     #chart-container { display: inline-block; width: 50%; }
@@ -23,7 +23,11 @@
             <li>Hei Hei
               <ul>
                 <li>Pang Pang</li>
-                <li>Xiang Xiang</li>
+                <li>Xiang Xiang
+                  <ul>
+                    <li>Sajib Sarker</li>
+                  </ul>
+                </li>
               </ul>
             </li>
           </ul>
@@ -33,8 +37,8 @@
   </ul>
   <div id="chart-container"></div>
 
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/jquery.orgchart.js"></script>
+  <script type="text/javascript" src="../src/js/jquery.min.js"></script>
+  <script type="text/javascript" src="../src/js/jquery.orgchart.js"></script>
   <script type="text/javascript">
     $(function() {
 
